feat(api): Criado configuração de conexão com banco MySQL

--- a/GeekShopping/GeekShopping.Product.API/appsettings.json
+++ b/GeekShopping/GeekShopping.Product.API/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "MySQLConnection": {
+
+      "MySQLConnectionString": "Server=localhost;User=root;Password=admin123;Database=geek_shopping_product_api"
+    }
+  }
