feat: Criado banco de dados com entity framework, in mysql com data table

--- a/GeekShopping/GeekShopping.Product.API/appsettings.json
+++ b/GeekShopping/GeekShopping.Product.API/appsettings.json
@@ -6,8 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "MySQLConnection": {
-
-      "MySQLConnectionString": "Server=localhost;User=root;Password=admin123;Database=geek_shopping_product_api"
-    }
+  "MySQlConnection": {
+    "MySQlConnectionString": "Server=localhost;User=root;Password=admin123;Database=geek_shopping_product_api"
   }
+}
