--- a/GeekShopping/GeekShopping.Web/appsettings.json
+++ b/GeekShopping/GeekShopping.Web/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MySQlConnection": {
+    "MySQlConnectionString": "Server=localhost;User=root;Password=admin123;Database=geek_shopping_product_api"
+  }
 }
