--- a/GeekShopping/GeekShopping.Product.API/GeekShopping.Product.API.csproj
+++ b/GeekShopping/GeekShopping.Product.API/GeekShopping.Product.API.csproj
@@ -23,4 +23,8 @@
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Data\ValueObjects\" />
+  </ItemGroup>
+
 </Project>
